// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Array [
  <table
    border="0"
    cellPadding="5"
    width="100%"
  >
    <caption>
      Таблица 
    </caption>
    <tbody>
      <tr>
        <th>
          <input
            onClick={[Function]}
            type="button"
            value="Все"
          />
          <input
            onClick={[Function]}
            type="button"
            value="Активные"
          />
          <input
            onClick={[Function]}
            type="button"
            value="Заблокированые"
          />
        </th>
      </tr>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          редактировать
        </th>
        <th>
          удалить
        </th>
      </tr>
      <tr
        className="ClientRow"
        onClick={[Function]}
      >
        <td>
           
          Иванов 1 velcom
        </td>
        <td>
          Иван 1
        </td>
        <td>
          Иванович 1
        </td>
        <td>
          200
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="редактировать"
          />
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="удалить"
          />
        </td>
      </tr>
      <tr
        className="ClientRow"
        onClick={[Function]}
      >
        <td>
           
          Иванов 2 velcom
        </td>
        <td>
          Иван 2
        </td>
        <td>
          Иванович 2
        </td>
        <td>
          200
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="редактировать"
          />
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="удалить"
          />
        </td>
      </tr>
      <tr
        className="ClientRow"
        onClick={[Function]}
      >
        <td>
           
          Иванов 3 velcom
        </td>
        <td>
          Иван 3
        </td>
        <td>
          Иванович 3
        </td>
        <td>
          200
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="редактировать"
          />
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="удалить"
          />
        </td>
      </tr>
      <tr
        className="ClientRow"
        onClick={[Function]}
      >
        <td>
           
          Иванов blocked velcom
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="blocked"
        >
          blocked
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="редактировать"
          />
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>,
  <br />,
  <input
    disabled={false}
    onClick={[Function]}
    type="button"
    value="New Product"
  />,
]
`;

exports[`Filter Product Product работа FilterProduct 	active Snapshot 1`] = `
Array [
  <table
    border="0"
    cellPadding="5"
    width="100%"
  >
    <caption>
      Таблица 
    </caption>
    <tbody>
      <tr>
        <th>
          <input
            onClick={[Function]}
            type="button"
            value="Все"
          />
          <input
            onClick={[Function]}
            type="button"
            value="Активные"
          />
          <input
            onClick={[Function]}
            type="button"
            value="Заблокированые"
          />
        </th>
      </tr>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          редактировать
        </th>
        <th>
          удалить
        </th>
      </tr>
      <tr
        className="ClientRow"
        onClick={[Function]}
      >
        <td>
           
          Иванов 1 velcom
        </td>
        <td>
          Иван 1
        </td>
        <td>
          Иванович 1
        </td>
        <td>
          200
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="редактировать"
          />
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="удалить"
          />
        </td>
      </tr>
      <tr
        className="ClientRow"
        onClick={[Function]}
      >
        <td>
           
          Иванов 2 velcom
        </td>
        <td>
          Иван 2
        </td>
        <td>
          Иванович 2
        </td>
        <td>
          200
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="редактировать"
          />
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="удалить"
          />
        </td>
      </tr>
      <tr
        className="ClientRow"
        onClick={[Function]}
      >
        <td>
           
          Иванов 3 velcom
        </td>
        <td>
          Иван 3
        </td>
        <td>
          Иванович 3
        </td>
        <td>
          200
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="редактировать"
          />
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>,
  <br />,
  <input
    disabled={false}
    onClick={[Function]}
    type="button"
    value="New Product"
  />,
]
`;

exports[`Filter Product Product работа FilterProduct 	blocked  Snapshot 1`] = `
Array [
  <table
    border="0"
    cellPadding="5"
    width="100%"
  >
    <caption>
      Таблица 
    </caption>
    <tbody>
      <tr>
        <th>
          <input
            onClick={[Function]}
            type="button"
            value="Все"
          />
          <input
            onClick={[Function]}
            type="button"
            value="Активные"
          />
          <input
            onClick={[Function]}
            type="button"
            value="Заблокированые"
          />
        </th>
      </tr>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          редактировать
        </th>
        <th>
          удалить
        </th>
      </tr>
      <tr
        className="ClientRow"
        onClick={[Function]}
      >
        <td>
           
          Иванов blocked velcom
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="blocked"
        >
          blocked
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="редактировать"
          />
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>,
  <br />,
  <input
    disabled={false}
    onClick={[Function]}
    type="button"
    value="New Product"
  />,
]
`;
